outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-23_15-16-28/evaluations/problem_eval5979308404706798688_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of the distance to the destination as the number of remaining nodes decreases, while also incorporating a penalty for nodes that are too far from either the current node or the destination, ensuring a balance between proximity and completeness.}
                                                                                                                                                                                                                                                                   ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of the distance to the destination as the number of remaining nodes decreases, while also incorporating a penalty for nodes that are too far from either the current node or the destination, ensuring a balance between proximity and completeness.}
                                                                                                                                                                                                                                                                   ^
SyntaxError: unmatched '}'
